Thu Jun 28 00:35:09 BST 2001  Colin Watson  <cjwatson@debian.org>

	The caching cleanup I've been promising for weeks. Here be dragons.

	* src/man.c (man): Only update database caches if --update is given.
	  (main): --all no longer implies a database update (you can always
	  use --all --update if you need that).

	* man/man1/man.man1 (OVERVIEW): It's no longer necessarily man's job
	  to keep the caches up to date; use --update to get that.
	  (DEFAULTS): Likewise. Some rationale. Mention globbing fallback.
	  (OPTIONS/--local-file): Fix typo.
	  (OPTIONS/--update): New description. Only useful with setuid man.
	* manual/misc.me (Modes of operation): man will only update database
	  entries if the --update flag is used.

Tue Jun 26 22:10:07 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: More cleanup. No substantive changes.
	* include/manconfig.h.in: Likewise. Also bring xrealloc() prototype
	  into sync.

	* src/mandb.c (main): Allow root as well as MAN_OWNER to work on
	  system manpaths.

Tue Jun 26 03:45:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/man_db.conf.in (SECTION): Add a little more advice about where
	  to list sections with extensions.

	* src/manp.c (add_to_dirlist): Add SECTIONS as an alias for SECTION,
	  since I keep getting it wrong and I came up with it in the first
	  place. Both make sense in different situations.

	* src/check_mandirs.c (splitline): Trim trailing spaces off names
	  and descriptions. If the given base_name contains a comma, only
	  use the part of the name before it as the target for pointers.

	* src/whatis.c (get_whatis): Unroll recursion into a finite loop to
	  avoid infinite recursion if the database contains a pointer loop.
	  Add the page name as an argument so that a warning can be printed.
	  (display): Pass the new argument to get_whatis().
	  (apropos): Recommend 'mandb --create' rather than plain 'mandb' if
	  the database gets corrupted.
